tests/idris2/operators/operators004/expected
1/1: Building Test (Test.idr)
Error: Operator -:- is non-associative

Test:13:8--13:22
 09 | (:-:) : a -> List a -> List a
 10 | (:-:) = (::)
 11 | 
 12 | test : List Nat
 13 | test = 4 -:- 3 :-: []
             ^^^^^^^^^^^^^^

Possible solutions:
 - Add brackets around every use of -:-
 - Change the fixity of -:- at Test:1 to `infixl` or `infixr`
Error: Operator :-: is non-associative

Test:16:9--16:23
 12 | test : List Nat
 13 | test = 4 -:- 3 :-: []
 14 | 
 15 | test2 : List Nat
 16 | test2 = 4 :-: 3 -:- []
              ^^^^^^^^^^^^^^

Possible solutions:
 - Add brackets around every use of :-:
 - Change the fixity of :-: at Test:2 to `infixl` or `infixr`
